# HexMagic

./: .gitignore  CMakeLists.txt  README.md  physics.h
libsoundio/: CMakeLists.txt  libsoundio.so.1.1.0
libsoundio/example/: sio_list_devices.c  sio_microphone.c  sio_record.c  sio_sine.c
libsoundio/src/: soundio_internal.h
libsoundio/test/: backend_disconnect_recover.c  overflow.c  underflow.c
resources/: lightPos.frag  lightPos.vert  materials.mtl  pickTexture.frag  pickTexture.vert  post.frag  post.vert  simple.frag  simple.vert
src/: Audio.h  Model.h  RenderEngine.h  WorldState.h  main.cpp
src/objload/: objLoader.hpp  obj_parser.h
src/simple_fft/: fft_settings.h
src/soundio/: soundio.h
